UPDATE: need to work on the mobile version. ISSUE: somehow theres a extra white space coming u on the right so need to fix that

--- a/front-end/rcsc/src/components/reasonsToStart/reasonsToStart.css
+++ b/front-end/rcsc/src/components/reasonsToStart/reasonsToStart.css
@@ -18,9 +18,10 @@
   text-align: center;
   margin-bottom: 45px;
 }
-
+.reason-image {
+  width: 60%;
+}
 .reason-slogan {
-  width: 350px;
   position: absolute;
   left: 20%;
   top: 20%;
