--- a/front-end/rcsc/src/style-sheet/home-front-page.css
+++ b/front-end/rcsc/src/style-sheet/home-front-page.css
@@ -39,13 +39,14 @@ This is for the actual image tag. Changing the size of the
 image from here. 
 */
 .front_page_image img {
-  width: 129%;
+  width: 100%;
   margin-bottom: -150px;
 }
 .featureContainer {
   height: 285px;
   margin-left: 5px;
   background-color: rgba(1, 130, 127, 0.54) !important;
+  padding-bottom: 60px;
 }
 
 /*
